--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -1,5 +1,9 @@
 ---
 import "../styles/global.css";
+interface Props {
+  title?: string;
+}
+const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -9,7 +13,7 @@ import "../styles/global.css";
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Coworking Reservation App</title>
+    <title>{title}</title>
   </head>
   <body>
     <slot />
