Fix scripts path

--- a/frontend/src/components/auth/Login.astro
+++ b/frontend/src/components/auth/Login.astro
@@ -51,7 +51,7 @@ justify-center">
   </form>
 </div>
 
-<script type="module">
+<script>
   import { signInWithGoogle, signInWithEmail } from "/src/services/auth";
 
   const form = document.querySelector("form");
