--- a/frontend/src/components/auth/Register.astro
+++ b/frontend/src/components/auth/Register.astro
@@ -73,7 +73,7 @@ justify-center">
   </form>
 </div>
 
-<script type="module">
+<script>
   import { signUpWithEmail, signInWithGoogle } from "/src/services/auth";
   import { validatePassword } from "/src/utils/password";
 
