--- a/frontend/app/src/layouts/Layout.astro
+++ b/frontend/app/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Navbar from "../components/header/Navbar.astro";
 interface Props {
   title?: string;
 }
@@ -16,6 +17,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <slot />
+    <Navbar />
+    <div class="mt-6">
+      <slot />
+    </div>
   </body>
 </html>
