Avance diseño home I

--- a/frontend/app/src/components/Welcome.astro
+++ b/frontend/app/src/components/Welcome.astro
@@ -1,12 +1,12 @@
----
-
----
-
-<div id="container">
-  <main>
-    <section id="hero">
-      <h1>Reserva tu espacio en el coworking.</h1>
-      <section></section>
-    </section>
-  </main>
+<div id="hero" class="bg-cover bg-center w-full h-[500px] rounded-b-2xl">
+  <div class="flex flex-col items-center justify-center h-full text-white bg-black/40 gap-8">
+    <h1 class="text-8xl font-bold mb-4">Work Space</h1>
+    <p class="text-4xl mb-6 font-semibold">Find Your Next Coworking Space</p>
+  </div>
 </div>
+
+<style>
+  #hero {
+    background-image: url("/src/icons/fondoHero.jpg");
+  }
+</style>
