--- a/frontend/app/src/components/header/Navbar.astro
+++ b/frontend/app/src/components/header/Navbar.astro
@@ -7,42 +7,45 @@ const user = userState?.data;
 ---
 
 <header
-  class="flex justify-between bg-primary/45 text-white backdrop-blur fixed top-0 left-0 right-0 z-10 px-4 py-2"
+  class="flex-col bg-primary/45 text-white backdrop-blur fixed top-0 left-0 right-0 z-10 px-6 py-6 font-semibold"
 >
-  <!-- Logo  -->
-  <div class="logo">
-    <a href="/">WS</a>
-  </div>
+  <div class="flex justify-between items-center">
+    <!-- Logo  -->
+    <div class="logo">
+      <a href="/">WS</a>
+    </div>
 
-  <!-- Navbar -->
-  <nav aria-label="Navbar">
-    <ul class="flex gap-4">
-      <li><a href="/">Home</a></li>
-      <li><a href="/services">Spaces</a></li>
-      <li><a href="/contact">Contact Us</a></li>
-      <div>
-        {
-          user ? (
-            <>
+    <!-- Navbar -->
+    <nav aria-label="Navbar">
+      <ul class="flex gap-8">
+        <li><a href="/" class="hover:text-black transition">Home</a></li>
+        <li><a href="/services" class="hover:text-black transition">Spaces</a></li>
+        <li><a href="/contact" class="hover:text-black transition">Contact Us</a></li>
+        <div>
+          {
+            user ? (
+              <>
+                <li>
+                  <a href="/profile">Profile</a>
+                  <span>Hi, {user.email}</span>
+                </li>
+                <li>
+                  <button id="logout-btn">
+                    <a href="/logout">Logout</a>
+                  </button>
+                </li>
+              </>
+            ) : (
               <li>
-                <a href="/profile">Profile</a>
-                <span>Hi, {user.email}</span>
+                <a href="/login">Login/Register</a>
               </li>
-              <li>
-                <button id="logout-btn">
-                  <a href="/logout">Logout</a>
-                </button>
-              </li>
-            </>
-          ) : (
-            <li>
-              <a href="/login">Login/Register</a>
-            </li>
-          )
-        }
-      </div>
-    </ul>
-  </nav>
+            )
+          }
+        </div>
+      </ul>
+    </nav>
+  </div>
+  <div class="bg-white w-full h-[2px] mt-2"></div>
 </header>
 
 <script>
