--- a/frontend/app/src/components/products/ProductList.astro
+++ b/frontend/app/src/components/products/ProductList.astro
@@ -40,7 +40,7 @@ const rooms = [
 ];
 ---
 
-<div class="p-8">
+<div class="p-8 mb-8">
   <h2 class="text-3xl font-bold mb-6">OUR SPACES</h2>
   <div
     id="service-list"
