--- a/frontend/app/src/layouts/Layout.astro
+++ b/frontend/app/src/layouts/Layout.astro
@@ -17,8 +17,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <Navbar />
-    <div class="mt-6">
+    <div>
       <slot />
     </div>
   </body>
