--- a/frontend/app/src/components/reservation/ReservationForm.astro
+++ b/frontend/app/src/components/reservation/ReservationForm.astro
@@ -1,9 +1,19 @@
 ---
-const { product_id } = Astro.props;
+import type { Product } from "../../models/product";
+const { product } = Astro.props as { product: Product };
 ---
 
 <p class="text-xl font-bold px-6 text-primary flex">Confirm your reservation</p>
-<form class="p-6" data-product-id={product_id}>
+<form
+  class="p-6"
+  data-product-id={product.id}
+  data-product-title={product.title}
+  data-product-address={product.address}
+  data-product-capacity={product.capacity}
+  data-product-price={product.price}
+  data-product-image={product.image}
+  data-product-details={product.details.join("|")}
+>
   <label for="date" class="text-sm font-semibold">Date</label>
   <input
     id="date"
@@ -75,6 +85,8 @@ const { product_id } = Astro.props;
 <script>
   import { watchForSelectionDate } from "/src/utils/calendar.ts";
   import { saveReservation } from "/src/services/reservations.ts";
+  import { sendEmail } from "/src/services/email.ts";
+  import type { EmailData } from "/src/models/email.ts";
   const timeStart = document.getElementById("time-start") as HTMLInputElement;
   const timeEnd = document.getElementById("time-end") as HTMLInputElement;
   const day = document.getElementById("date") as HTMLInputElement;
@@ -104,23 +116,68 @@ const { product_id } = Astro.props;
   });
 
   if (form) {
+    const {
+      productId,
+      productTitle,
+      productAddress,
+      productCapacity,
+      productPrice,
+      productImage,
+      productDetails,
+    } = form.dataset;
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
       const formData = new FormData(form);
+      const client = {
+        name: formData.get("name") as string,
+        email: formData.get("email") as string,
+        phone: Number(formData.get("phone")),
+      };
+
       const reservation = {
-        client: {
-          name: formData.get("name") as string,
-          email: formData.get("email") as string,
-          phone: Number(formData.get("phone")),
-        },
+        client,
         title: formData.get("title") as string,
         start: startDate,
         end: endDate,
         userId: "1",
         productId: form.dataset.productId as string,
       };
-      const { success, message } = await saveReservation(reservation);
-      if (success) {
+
+      const { success, message, data } = await saveReservation(reservation);
+
+      if (success && data) {
+        const _startDate = new Date(startDate);
+        const _endDate = new Date(endDate);
+
+        const totalTime = _endDate.getTime() - _startDate.getTime();
+        const totalHours = Math.ceil(totalTime / (1000 * 60 * 60));
+
+        const totalAmount = totalHours * +(productPrice || 0);
+        const totalAmountText = `$${totalAmount.toFixed(2)}`;
+
+        const emailData: EmailData = {
+          email: client.email,
+          order_id: data.id,
+          orders: [
+            {
+              image_url: productImage || "",
+              capacity: `${productCapacity}`,
+              reserved_by: client.name,
+              reservation_date: day.value,
+              reservation_time: `${timeStart.value} - ${timeEnd.value}`,
+              price_per_hour: `$${productPrice || "0.00"}`,
+              details: productDetails?.split("|") || [],
+              total_price: totalAmountText,
+            },
+          ],
+          cost: {
+            total: totalAmountText,
+          },
+        };
+        console.log(emailData);
+
+        sendEmail(emailData);
+
         alert(message);
         form.reset();
       }
