Avance de diseño II

--- a/frontend/app/src/components/header/Navbar.astro
+++ b/frontend/app/src/components/header/Navbar.astro
@@ -19,7 +19,7 @@ const user = userState?.data;
     <nav aria-label="Navbar">
       <ul class="flex gap-8">
         <li><a href="/" class="hover:text-black transition">Home</a></li>
-        <li><a href="/services" class="hover:text-black transition">Spaces</a></li>
+        <li><a href="#product-list" class="hover:text-black transition">Spaces</a></li>
         <li><a href="/contact" class="hover:text-black transition">Contact Us</a></li>
         <div>
           {
