--- a/frontend/app/src/pages/index.astro
+++ b/frontend/app/src/pages/index.astro
@@ -8,7 +8,7 @@ import ProductList from "../components/products/ProductList.astro";
 <Layout>
   <Navbar />
   <Welcome />
-  <section>
+  <section id="service-list">
     <ProductList />
   </section>
 </Layout>
