--- a/frontend/app/src/layouts/LayoutLogin.astro
+++ b/frontend/app/src/layouts/LayoutLogin.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <main class="h-screen justify-center items-center relative">
+    <main class="login h-screen justify-center items-center relative">
       <img
         src={bg.src}
         alt="Background-office"
