--- a/frontend/app/src/styles/global.css
+++ b/frontend/app/src/styles/global.css
@@ -8,13 +8,16 @@ input {
   outline: none;
 }
 
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus {
-  background-color: transparent !important;
-  background-clip: text;
-  -webkit-text-fill-color: white !important;
-  caret-color: white !important;
+
+.login {
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus {
+    background-color: transparent !important;
+    background-clip: text;
+    -webkit-text-fill-color: white !important;
+    caret-color: white !important;
+  }
 }
 
 button {
