--- a/frontend/app/src/layouts/Layout.astro
+++ b/frontend/app/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Navbar from "../components/header/Navbar.astro";
+import Dialog from "../components/Dialog.astro";
 interface Props {
   title?: string;
 }
@@ -16,10 +17,11 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
+  <body class="relative overflow-y-hidden">
     <Navbar />
-    <div class="mt-6">
+    <div class="mt-6 h-full overflow-y-auto">
       <slot />
     </div>
+    <Dialog id="confirmation-dialog" />
   </body>
 </html>
