--- a/frontend/app/src/components/Welcome.astro
+++ b/frontend/app/src/components/Welcome.astro
@@ -1,5 +1,5 @@
 <div id="hero" class="bg-cover bg-center w-full h-screen rounded-b-2xl">
-  <div class="flex flex-col items-center justify-center h-full text-white bg-black/40 gap-8">
+  <div class="h-full text-white bg-black/40 gap-8 text-center flex flex-col justify-center">
     <h1 class="text-8xl font-bold mb-4">Work Space</h1>
     <p class="text-4xl mb-6 font-semibold">Find Your Next Coworking Space</p>
   </div>
