--- a/frontend/app/src/components/Welcome.astro
+++ b/frontend/app/src/components/Welcome.astro
@@ -1,12 +1,12 @@
----
-
----
-
-<div id="container">
-  <main>
-    <section id="hero">
-      <h1>Reserva tu espacio en el coworking.</h1>
-      <section></section>
-    </section>
-  </main>
+<div id="hero" class="bg-cover bg-center w-full h-screen rounded-b-2xl">
+  <div class="h-full text-white bg-black/60 gap-10 text-center flex flex-col justify-center">
+    <h1 class="text-8xl font-bold px-10">Work Space</h1>
+    <p class="text-4xl font-semibold px-10">Find Your Next Coworking Space</p>
+  </div>
 </div>
+
+<style>
+  #hero {
+    background-image: url("/src/icons/fondoHero.jpg");
+  }
+</style>
