--- a/frontend/app/src/pages/register.astro
+++ b/frontend/app/src/pages/register.astro
@@ -1,6 +1,6 @@
 ---
 import WelcomeMessage from "../components/auth/WelcomeMessage.astro";
-import Register from "../components/auth/Register.astro";
+import RegisterComponent from "../components/auth/Register.astro";
 import LayoutLogin from "../layouts/LayoutLogin.astro";
 ---
 
@@ -18,7 +18,7 @@ import LayoutLogin from "../layouts/LayoutLogin.astro";
         </div>
 
         <!-- Login Form -->
-        <div class="flex-1"><Register /></div>
+        <div class="flex-1"><RegisterComponent /></div>
       </div>
     </div>
   </LayoutLogin>
