--- a/frontend/app/src/pages/products/[id].astro
+++ b/frontend/app/src/pages/products/[id].astro
@@ -1,11 +1,13 @@
 ---
+export const prerender = true;
 import Layout from "../../layouts/Layout.astro";
 
-import { getAllProducts } from "../../services/products";
-import ProductDetail from "../../components/products/ProductDetail.astro";
-import ReservationForm from "../../components/reservation/ReservationForm.astro";
+import { getAllProducts } from "/src/services/products";
+import ProductDetail from "/src/components/products/ProductDetail.astro";
+import ReservationForm from "/src/components/reservation/ReservationForm.astro";
 export async function getStaticPaths() {
   const products = await getAllProducts();
+
   return products.map((product) => ({
     params: { id: product.id },
     props: { product },
